# chess-rust

./: Cargo.toml  README.md  casa.rs  jogador.rs  main.rs  peca.rs  posicao.rs  tabuleiro.rs
peca/: bispo.rs  cavalo.rs  peao.rs  rainha.rs  rei.rs  torre.rs
src/: main.rs
