[package]
name = "chess-api"
version = "0.1.0"
edition = "2024"
description = "RESTful chess API using Axum and Shakmaty"
license = "MIT OR Apache-2.0"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
shakmaty = { version = "0.29", features = ["serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "decompression-gzip"] }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
